package year_2019.day06;

public interface ISolarSystem {
    Planet getPlanet(String name);
}
